<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen"
        android:textSize="36sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/onPrimary" />

    <Button
        android:id="@+id/btnUserFeature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_feature"
        android:layout_marginTop="16dp"
        android:minWidth="250dp" />

    <Button
        android:id="@+id/btnPostFeature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_feature"
        android:layout_marginTop="16dp"
        android:minWidth="250dp" />
</LinearLayout>